# erpnext-connector

./: .env.example  AGENTS.md  CONTEXT.md  pyproject.toml
.scratch/erpnext-shopify-connector/: PRD.md
.scratch/erpnext-shopify-connector/issues/: 01-connector-scaffolding.md  02-shopify-graphql-client.md  03-erpnext-client-and-setup.md  04-retry-queue-and-status-api.md  05-shopify-product-to-erpnext-item.md  06-shopify-product-archive-to-item-disable.md  07-23-full-bidirectional-sync.md  (+18 more)
connector/: config.py  db.py  fingerprint.py  main.py  models.py  retry_queue.py
connector/api/: erpnext_webhooks.py  health.py  shopify_webhooks.py  status.py
connector/erpnext/: client.py  setup.py
connector/shopify/: client.py  models.py  mutations.py  setup.py  webhooks.py
connector/sync/: customers.py  entities.py  fulfillments.py  inventory.py  orders.py  products.py  products_to_shopify.py  reconciliation.py
docs/adr/: 0001-shopify-graphql-admin-api.md  0002-python-fastapi-connector.md  0003-fingerprint-as-content-hash.md
docs/agents/: domain.md  triage-labels.md
tests/: conftest.py  test_fingerprint.py  test_health.py  test_retry_queue.py  test_status_api.py
tests/api/: test_erpnext_webhooks.py  test_shopify_sync_webhooks.py  test_shopify_webhooks.py
tests/erpnext/: fakes.py  test_client.py  test_setup.py
tests/shopify/: fakes.py  test_client.py  test_setup.py  test_webhooks.py
tests/sync/: conftest.py  test_customers.py  test_fulfillments.py  test_inventory.py  test_orders.py  test_product_disable.py  test_products.py  test_products_to_shopify.py
