[project]
name = "erpnext-shopify-connector"
version = "0.1.0"
description = "Standalone Connector keeping Shopify and ERPNext in sync"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "frappe-client>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx2>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["connector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
